--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@xyflow/react": "^12.10.0",
     "better-sqlite3": "^12.6.2",
     "drizzle-orm": "^0.45.1",
+    "html-to-image": "^1.11.13",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
