--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@dagrejs/dagre": "^2.0.3",
     "@xyflow/react": "^12.10.0",
     "better-sqlite3": "^12.6.2",
     "drizzle-orm": "^0.45.1",
+    "elkjs": "^0.11.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
