feat: Complete Team Acquisition Tree with interactive visualization
## New Features
- Full team acquisition tree view (/team/:teamAbbr)
- Vertical roster column organized by Starters → Bench → Two-Way
- 🏠 Homegrown indicator for drafted/signed players
- Interactive path highlighting (click node to trace to origin)
- Origin = oldest player in trade chain (single origin per team)
- Export to JPEG with Dark/Light mode for social media sharing
- Header with title, stats; Footer with @ByAkshayRam credit + data sources

## Technical
- ELK.js layered layout with post-processing for roster column
- html-to-image for export functionality
- Canvas API composition for header/footer overlay
- becamePlayer feature shows what draft picks became

## Files
- New: TeamAcquisitionTree.tsx, team API route, team page
- Updated: AcquisitionTree, PlayerSelector, acquisition JSON files
- Docs: Complete requirements doc with implementation details

--- a/app/package.json
+++ b/app/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
+    "dev": "next dev --webpack -p 3456",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3456",
     "lint": "eslint"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "better-sqlite3": "^12.6.2",
     "drizzle-orm": "^0.45.1",
     "elkjs": "^0.11.0",
+    "html-to-image": "^1.11.13",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
