--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "drizzle-kit": "^0.31.8",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "puppeteer": "^24.37.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
