feat: card renderer API, SEO, share buttons, remove old export
- Card renderer: 4 card types (player, chain, team, stat) via @vercel/og
- SEO: dynamic generateMetadata for team + player pages with OG images
- Sitemap.xml + robots.txt for search engines
- Share buttons: copy link, Twitter/X, Reddit (replaces old export menu)
- Remove unbranded graphic export (brand quality control)
- Layout metadata upgraded with twitter card, site name

--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
+    "@vercel/og": "^0.8.6",
     "@xyflow/react": "^12.10.0",
     "better-sqlite3": "^12.6.2",
     "drizzle-orm": "^0.45.1",
